@@ -1,3 +1,14 @@
+Change log next version
+-----------------------
+* Fixed issues with colliding keys in multi-expectations for body and header validations. For example if "/x" returns the JSON { "x" : 2 } this would (previously) not throw an asertion error:
+    when().
+         get("/lotto").
+    then().
+         body("x", greaterThan(1),
+              "x", equalTo(5),
+              "x", lessThan(3));
+  The reason was the only the last first and last "x" expectation were taken into account (issue 714).
+
 Change log 3.0.0 (2016-06-03)
 -----------------------------
 * Upgrading scribe dependencies to latest version 2.5.3 (thanks to Aniket for pull request)
